# MTM_HW1

./: CMakeLists.txt  election.c  election.h  main.c  makefile  map_serializer.c  map_serializer.h
OLD/: map.c  node.c  node.h
dry/: q1.c  q2.c  q2.txt
misc/: makefile
mtm_map/: map.c  map.h  node.c  node.h
tests/: electionTestsExample.c  map_example_test.c
